# qt_metadata_desktop

./: README.md
src/: CMakeLists.txt  conanfile.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  res.qrc
src/includes/: database.cpp  rz_config.h  rz_qt_metatags.cpp  rz_qt_metatags.hpp  sqlite3.cpp  sqlite3.hpp
